force-app/main/default/objects/Event_RSVP__c/Event_RSVP__c.object-meta.xml
<CustomObject>
    <label>7S Event RSVP</label>
    <nameField>
        <displayFormat>RSVP-{0000}</displayFormat>
        <label>Event RSVP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Event RSVPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>