force-app/main/default/objects/Event_RSVP__c/fields/EventChangeNotification__c.field-meta.xml
<CustomField>
    <fullName>EventChangeNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EventChangeNotification</label>
    <type>Checkbox</type>
</CustomField>