force-app/main/default/objects/Event_RSVP__c/validationRules/User_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>User_must_be_set</fullName>
    <active>true</active>
    <description>User field cannot be blank on RSVP record</description>
    <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User field is not set. Please set a user value.</errorMessage>
</ValidationRule>